# ZAFD001

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  config.py  docker-compose.yml  pyproject.toml  ralph-codex-loop.sh  ralph-codex-once.sh  ralph-loop.sh  ralph-once.sh  requirements.txt  security.md
.scratch/legal-awareness-assistant/: PRD.md
artifacts/: ingest_ledger.json  phase0_checkpoint.md
data/: glossary.json  ipc_bns_mapping.json  landmark_judgments.json  schemes.json
docs/: postgres.md
ingestion/: README.md  __main__.py  checkpoint.py  chunker.py  coverage.py  import_assist.py  landmarks.py  mapping.py  models.py  parser.py  pipeline.py  schemes.py  validation.py  vectorstore.py
rag/: accounts.py  answer.py  api.py  citation.py  composition.py  domain.py  eval.py  expansion.py  fastapi_app.py  generation.py  multilingual.py  privacy.py  retrieval.py  shell.py  shell_app.py  store.py  text.py  verifier.py
tests/: conftest.py  doubles.py  test_accounts.py  test_answer.py  test_api.py  test_checkpoint.py  test_chunker.py  test_composition.py  test_config.py  test_consent_store.py  test_consistency.py  test_conversation.py  test_coverage.py  test_eval.py  test_expansion.py  test_fastapi_app.py  test_followup_memory.py  test_guardrails.py  test_import_assist.py  test_incremental.py  test_landmarks.py  test_live_generation.py  test_live_multilingual.py  test_live_retrieval.py  test_llm_draft.py  test_mapping.py  test_models.py  test_multilingual.py  test_multilingual_tamil_gujarati.py  test_new_domains.py  test_parser.py  test_pipeline.py  test_postgres_store.py  test_privacy.py  test_recognition.py  test_retrieval.py  test_schemes.py  test_shell.py  test_shell_app.py  test_shell_app_privacy.py  (+7 more)
web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
(+163 files in other folders)
