[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-ingestion"
version = "0.1.0"
description = "Phase 0 ingestion module for the Multilingual Legal Awareness Assistant (ZABR-008)"
requires-python = ">=3.10"
dependencies = [
    # Vector store + embeddings (extra also pulls fastembed/onnxruntime)
    "qdrant-client[fastembed]>=1.14.2,<2.0",
    # Web/API layer
    "fastapi>=0.138,<1.0",
    "uvicorn>=0.49,<1.0",         # ASGI server: `uvicorn rag.composition:build_demo_app --factory`
    "pydantic>=2.13,<3.0",
    "anyio>=4.14,<5.0",
    "httpx>=0.28,<1.0",
    # Clerk JWT verification (RS256 needs the crypto extra)
    "pyjwt[crypto]>=2.13,<3.0",
    # Fernet at-rest crypto: pinned with a floor (backs conversation encryption)
    "cryptography>=49.0,<50.0",
    # Postgres durable store (binary extra ships libpq, no build toolchain needed)
    "psycopg[binary]>=3.3,<4.0",
]

[tool.setuptools]
packages = ["ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
exclude = "tests"
